Fix alignment of SVG images with text in buttons

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -133,6 +133,10 @@ pre {
   background: #cef;
 }
 
+.btn svg {
+  vertical-align: text-top;
+}
+
 /* ===== pages ===== */
 
 img.shadow {
